style: add selector for icon-only buttons to not rely on icon name

--- a/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
+++ b/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
@@ -113,7 +113,8 @@
 
   // --- Standalone Icon Buttons
   @else if $direction == only {
-    .sage-btn--icon-only-#{$icon-name} {
+    .sage-btn--icon-only-#{$icon-name},
+    [class*="sage-btn--icon-only-"]  {
       justify-content: center;
       text-align: center;
       border-radius: sage-border(radius-round);
