fix: add text dotted underline (#2045)
* fix: add new dotted underline classes

* style: add dotted underline styles

* docs: update docs to include dotted underline

* fix: hello linter my old friend

* style: correct underline dotted styles for better safari support

--- a/packages/sage-assets/lib/stylesheets/core/_typography.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_typography.scss
@@ -280,3 +280,12 @@ body:not(.sage-excluded),
     -webkit-line-clamp: #{$i};
   }
 }
+
+.t-sage--underline-dotted {
+  text-decoration-color: sage-color(grey, 600);
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+  text-decoration-thickness: 12%;
+  text-underline-offset: 0.3rem;
+  text-underline-position: under;
+}
