chore: next version bump (#2042)
* style: update Font Family's to match the system installed font name (#2038)

Co-authored-by: Julian Skinner <dev+github-bot@kajabi.com>

* style: add border to only catalog item child (#2040)

* style: update rtl positioning (#2043)

* fix: remove button role from react modal (#2044)

* fix: remove rtl logical wrapper (#2041)

* fix: add text dotted underline (#2045)

* fix: add new dotted underline classes

* style: add dotted underline styles

* docs: update docs to include dotted underline

* fix: hello linter my old friend

* style: correct underline dotted styles for better safari support

* style: add selector for icon-only buttons to not rely on icon name (#2046)

* style: add selector for icon-only buttons to not rely on icon name

* style: correct lint error

---------

Co-authored-by: Julian Skinner <dev+github-bot@kajabi.com>
Co-authored-by: Quinton Jason <quinton.jason@gmail.com>
Co-authored-by: Phillip Lovelace <phillip.lovelace@kajabi.com>

--- a/packages/sage-assets/lib/stylesheets/core/_typography.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_typography.scss
@@ -6,7 +6,7 @@
 
 
 // Font definitions
-$-heading-font: "GreetStandard", "Inter", -apple-system, system-ui, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Ubuntu", sans-serif;
+$-heading-font: "Greet Standard", "Inter", -apple-system, system-ui, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Ubuntu", sans-serif;
 $-body-font-stack: "Inter", -apple-system, system-ui, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Ubuntu", sans-serif;
 $-body-margin-block-end: sage-spacing(xs);
 $-headings-margin-block-end: sage-spacing(sm);
@@ -279,4 +279,13 @@ body:not(.sage-excluded),
   .t-sage--line-clamp-#{$i} {
     -webkit-line-clamp: #{$i};
   }
+}
+
+.t-sage--underline-dotted {
+  text-decoration-color: sage-color(grey, 600);
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+  text-decoration-thickness: 12%;
+  text-underline-offset: 0.3rem;
+  text-underline-position: under;
 }
